Добавляет бекграунд в Герой

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             </li>
 
             <li class="features-itam icon-diagram">
-              <!--<div class="advantages">
-                <img src="./img/diagram.svg" alt="Диаграмма" />
+              <!-- <div class="advantages">
+                  <img src="./img/diagram.svg" alt="Диаграмма" />
               </div>-->
               <h3 class="features-title">ПЛАНИРОВАНИЕ</h3>
               <p class="features-text">
@@ -119,19 +119,19 @@
 
           <ul class="activity">
             <li class="activity-item">
-              <a href=""><img src="./img/img1.png" alt="Ноутбук" /></a>
+              <a href=""><img src="./img/img1.jpg" alt="Ноутбук" /></a>
               <h3 class="activity-title">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</h3>
             </li>
 
             <li class="activity-item">
               <a href=""
-                ><img src="./img/img3.png" alt="Мобильный телефон"
+                ><img src="./img/img3.jpg" alt="Мобильный телефон"
               /></a>
               <h3 class="activity-title">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</h3>
             </li>
 
             <li class="activity-item">
-              <a href=""><img src="./img/img2.png" alt="Монитор" /></a>
+              <a href=""><img src="./img/img2.jpg" alt="Монитор" /></a>
               <h3 class="activity-title">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</h3>
             </li>
           </ul>
@@ -145,7 +145,7 @@
 
           <ul class="team">
             <li class="team-item">
-              <a href=""><img src="./img/John.png" alt="John Smith" /></a>
+              <a href=""><img src="./img/John.jpg" alt="John Smith" /></a>
               <h3 class="team-name">John Smith</h3>
               <p class="team-text">Product Designer</p>
 
@@ -177,7 +177,7 @@
             </li>
 
             <li class="team-item">
-              <a href=""><img src="./img/Marta.png" alt="Marta Stewart" /></a>
+              <a href=""><img src="./img/Marta.jpg" alt="Marta Stewart" /></a>
               <h3 class="team-name">Marta Stewart</h3>
               <p class="team-text">Frontend Developer</p>
 
@@ -209,7 +209,7 @@
             </li>
 
             <li class="team-item">
-              <a href=""><img src="./img/Robert.png" alt="Robert Jakis" /></a>
+              <a href=""><img src="./img/Robert.jpg" alt="Robert Jakis" /></a>
               <h3 class="team-name">Robert Jakis</h3>
               <p class="team-text">Marketing</p>
 
@@ -241,7 +241,7 @@
             </li>
 
             <li class="team-item">
-              <a href=""><img src="./img/Martin.png" alt="Martin Doe" /></a>
+              <a href=""><img src="./img/Martin.jpg" alt="Martin Doe" /></a>
               <h3 class="team-name">Martin Doe</h3>
               <p class="team-text">UI Designer</p>
 
