--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
         <ul class="projects">
           <li class="itom">
             <a href="" class="projects-link">
-              <img src="./img/img (1).png" alt="Технокряк" />
+              <img src="./img/img (1).jpg" alt="Технокряк" />
               <h2 class="projects-title">Технокряк</h2>
               <p class="projects-text">Веб-сайт</p>
               <p class="project-fish">
@@ -92,7 +92,7 @@
           <li class="itom">
             <a href="" class="projects-link">
               <img
-                src="./img/img (2).png"
+                src="./img/img (2).jpg"
                 alt="Постер New Orlean vs Golden Star"
               />
               <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
@@ -107,7 +107,7 @@
 
           <li class="itom">
             <a href="" class="projects-link">
-              <img src="./img/img (3).png" alt="Логотип ресторана Seafood" />
+              <img src="./img/img (3).jpg" alt="Логотип ресторана Seafood" />
               <h2 class="projects-title">Ресторан Seafood</h2>
               <p class="projects-text">Веб-сайт</p>
               <p class="project-fish">
@@ -120,7 +120,7 @@
 
           <li class="itom">
             <a href="" class="projects-link">
-              <img src="./img/img (4).png" alt="Наушники" />
+              <img src="./img/img (4).jpg" alt="Наушники" />
               <h2 class="projects-title">Проект Prime</h2>
               <p class="projects-text">Маркетинг</p>
               <p class="project-fish">
@@ -133,7 +133,7 @@
 
           <li class="itom">
             <a href="" class="projects-link">
-              <img src="./img/img (5).png" alt="Коробки" />
+              <img src="./img/img (5).jpg" alt="Коробки" />
               <h2 class="projects-title">Проект Boxes</h2>
               <p class="projects-text">Приложение</p>
               <p class="project-fish">
@@ -146,7 +146,7 @@
 
           <li class="itom">
             <a href="" class="projects-link">
-              <img src="./img/img (6).png" alt="Монитор" />
+              <img src="./img/img (6).jpg" alt="Монитор" />
               <h2 class="projects-title">Inspiration has no Borders</h2>
               <p class="projects-text">Веб-сайт</p>
               <p class="project-fish">
@@ -159,7 +159,7 @@
 
           <li class="itom">
             <a href="" class="projects-link">
-              <img src="./img/img (7).png" alt="Журнал" />
+              <img src="./img/img (7).jpg" alt="Журнал" />
               <h2 class="projects-title">Издание Limited Edition</h2>
               <p class="projects-text">Дизайн</p>
               <p class="project-fish">
@@ -172,7 +172,7 @@
 
           <li class="itom">
             <a href="" class="projects-link">
-              <img src="./img/img (8).png" alt="Логотип проекта" />
+              <img src="./img/img (8).jpg" alt="Логотип проекта" />
               <h2 class="projects-title">Проект LAB</h2>
               <p class="projects-text">Маркетинг</p>
               <p class="project-fish">
@@ -185,7 +185,7 @@
 
           <li class="itom">
             <a href="" class="projects-link">
-              <img src="./img/img (9).png" alt="Ноутбук" />
+              <img src="./img/img (9).jpg" alt="Ноутбук" />
               <h2 class="projects-title">Growing Business</h2>
               <p class="projects-text">Приложение</p>
               <p class="project-fish">
