--- a/index.html
+++ b/index.html
@@ -36,14 +36,18 @@
 
         <ul class="auth-nav">
           <li class="auth-con">
-            <img src="./img/envelope.svg" alt="написить електронное письмо" />
+            <svg widht="16" height="11.2">
+              <use href="./img/symbol-defs.svg#icon-envelope"></use>
+            </svg>
             <a href="mailto:info@devstudio.com" class="links"
               >info@devstudio.com</a
             >
           </li>
 
           <li>
-            <img src="./img/smartphone.svg" alt="позвонить" />
+            <svg widht="10" height="15">
+              <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+            </svg>
             <a href="tel:+380961111111" class="links">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -145,131 +149,173 @@
 
           <ul class="team">
             <li class="team-item">
-              <a href=""><img src="./img/John.jpg" alt="John Smith" /></a>
-              <h3 class="team-name">John Smith</h3>
-              <p class="team-text">Product Designer</p>
+              <a href=""
+                ><img class="foto" src="./img/John.jpg" alt="John Smith"
+              /></a>
+              <div class="shadov">
+                <h3 class="team-name">John Smith</h3>
+                <p class="team-text">Product Designer</p>
 
-              <ul class="social">
-                <li class="social-img">
-                  <a href="">
-                    <img src="./img/instagram.svg" alt="instagram" />
-                  </a>
-                </li>
+                <ul class="social">
+                  <li class="social-img">
+                    <a href="">
+                      <svg widht="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <li class="social-img">
-                  <a href="">
-                    <img src="./img/tvitter.svg" alt="tvitter" />
-                  </a>
-                </li>
+                  <li class="social-img">
+                    <a href="">
+                      <svg widht="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-tvitter"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <li class="social-img">
-                  <a href="">
-                    <img src="./img/facebook.svg" alt="facebook" />
-                  </a>
-                </li>
+                  <li class="social-img">
+                    <a href="">
+                      <svg widht="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <li class="social-img">
-                  <a href="">
-                    <img src="./img/linkedin.svg" alt="linkedin" />
-                  </a>
-                </li>
-              </ul>
+                  <li class="social-img">
+                    <a href="">
+                      <svg widht="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="team-item">
               <a href=""><img src="./img/Marta.jpg" alt="Marta Stewart" /></a>
-              <h3 class="team-name">Marta Stewart</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="shadov">
+                <h3 class="team-name">Marta Stewart</h3>
+                <p class="team-text">Frontend Developer</p>
 
-              <ul class="social">
-                <li class="social-img">
-                  <a href="">
-                    <img src="./img/instagram.svg" alt="instagram" />
-                  </a>
-                </li>
+                <ul class="social">
+                  <li class="social-img">
+                    <a href="">
+                      <svg widht="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <li class="social-img">
-                  <a href="">
-                    <img src="./img/tvitter.svg" alt="tvitter" />
-                  </a>
-                </li>
+                  <li class="social-img">
+                    <a href="">
+                      <svg widht="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-tvitter"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <li class="social-img">
-                  <a href="">
-                    <img src="./img/facebook.svg" alt="facebook" />
-                  </a>
-                </li>
+                  <li class="social-img">
+                    <a href="">
+                      <svg widht="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <li class="social-img">
-                  <a href="">
-                    <img src="./img/linkedin.svg" alt="linkedin" />
-                  </a>
-                </li>
-              </ul>
+                  <li class="social-img">
+                    <a href="">
+                      <svg widht="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="team-item">
               <a href=""><img src="./img/Robert.jpg" alt="Robert Jakis" /></a>
-              <h3 class="team-name">Robert Jakis</h3>
-              <p class="team-text">Marketing</p>
+              <div class="shadov">
+                <h3 class="team-name">Robert Jakis</h3>
+                <p class="team-text">Marketing</p>
 
-              <ul class="social">
-                <li class="social-img">
-                  <a href="">
-                    <img src="./img/instagram.svg" alt="instagram" />
-                  </a>
-                </li>
+                <ul class="social">
+                  <li class="social-img">
+                    <a href="">
+                      <svg widht="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <li class="social-img">
-                  <a href="">
-                    <img src="./img/tvitter.svg" alt="tvitter" />
-                  </a>
-                </li>
+                  <li class="social-img">
+                    <a href="">
+                      <svg widht="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-tvitter"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <li class="social-img">
-                  <a href="">
-                    <img src="./img/facebook.svg" alt="facebook" />
-                  </a>
-                </li>
+                  <li class="social-img">
+                    <a href="">
+                      <svg widht="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <li class="social-img">
-                  <a href="">
-                    <img src="./img/linkedin.svg" alt="linkedin" />
-                  </a>
-                </li>
-              </ul>
+                  <li class="social-img">
+                    <a href="">
+                      <svg widht="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="team-item">
               <a href=""><img src="./img/Martin.jpg" alt="Martin Doe" /></a>
-              <h3 class="team-name">Martin Doe</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="shadov">
+                <h3 class="team-name">Martin Doe</h3>
+                <p class="team-text">UI Designer</p>
 
-              <ul class="social">
-                <li class="social-img">
-                  <a href="">
-                    <img src="./img/instagram.svg" alt="instagram" />
-                  </a>
-                </li>
+                <ul class="social">
+                  <li class="social-img">
+                    <a href="">
+                      <svg widht="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <li class="social-img">
-                  <a href="">
-                    <img src="./img/tvitter.svg" alt="tvitter" />
-                  </a>
-                </li>
+                  <li class="social-img">
+                    <a href="">
+                      <svg widht="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-tvitter"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <li class="social-img">
-                  <a href="">
-                    <img src="./img/facebook.svg" alt="facebook" />
-                  </a>
-                </li>
+                  <li class="social-img">
+                    <a href="">
+                      <svg widht="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <li class="social-img">
-                  <a href="">
-                    <img src="./img/linkedin.svg" alt="linkedin" />
-                  </a>
-                </li>
-              </ul>
+                  <li class="social-img">
+                    <a href="">
+                      <svg widht="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -283,37 +329,49 @@
           <ul class="clients">
             <li class="clients-item">
               <a href="">
-                <img src="./img/Client1.svg" alt="Клиент1" />
+                <svg widht="44.3" height="49.2">
+                  <use href="./img/symbol-defs.svg#icon-Client1"></use>
+                </svg>
               </a>
             </li>
 
             <li class="clients-item">
               <a href="">
-                <img src="./img/Client2.svg" alt="Клиент2" />
+                <svg widht="40" height="52">
+                  <use href="./img/symbol-defs.svg#icon-Client2"></use>
+                </svg>
               </a>
             </li>
 
             <li class="clients-item">
               <a href="">
-                <img src="./img/Client3.svg" alt="Клиент3" />
+                <svg widht="41" height="42.6">
+                  <use href="./img/symbol-defs.svg#icon-Client3"></use>
+                </svg>
               </a>
             </li>
 
             <li class="clients-item">
               <a href="">
-                <img src="./img/Client4.svg" alt="Клиент4" />
+                <svg widht="80" height="42">
+                  <use href="./img/symbol-defs.svg#icon-Client4"></use>
+                </svg>
               </a>
             </li>
 
             <li class="clients-item">
               <a href="">
-                <img src="./img/Client5.svg" alt="Клиент5" />
+                <svg widht="60" height="47">
+                  <use href="./img/symbol-defs.svg#icon-Client5"></use>
+                </svg>
               </a>
             </li>
 
             <li class="clients-item">
               <a href="">
-                <img src="./img/Client6.svg" alt="Клиент6" />
+                <svg widht="88.5" height="45.5">
+                  <use href="./img/symbol-defs.svg#icon-Client6"></use>
+                </svg>
               </a>
             </li>
           </ul>
@@ -339,10 +397,34 @@
         <div class="footer-marrite">
           <p class="footer-call">присоединяйтесь</p>
           <ul class="social">
-            <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-            <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-            <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
-            <li><a href="" aria-label="Ссылка на Linkedin">Linkedin</a></li>
+            <li class="circle">
+              <a href="" aria-label="Ссылка на Instagram">
+                <svg widht="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="circle">
+              <a href="" aria-label="Ссылка на Twitter">
+                <svg widht="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-tvitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="circle">
+              <a href="" aria-label="Ссылка на Facebook">
+                <svg widht="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="circle">
+              <a href="" aria-label="Ссылка на Linkedin">
+                <svg widht="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
