--- a/portfolio.html
+++ b/portfolio.html
@@ -36,14 +36,18 @@
 
         <ul class="auth-nav">
           <li class="auth-con">
-            <img src="./img/envelope.svg" alt="написить електронное письмо" />
+            <svg widht="16" height="11.2">
+              <use href="./img/symbol-defs.svg#icon-envelope"></use>
+            </svg>
             <a href="mailto:info@devstudio.com" class="links"
               >info@devstudio.com</a
             >
           </li>
 
           <li>
-            <img src="./img/smartphone.svg" alt="позвонить" />
+            <svg widht="10" height="15">
+              <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+            </svg>
             <a href="tel:+380961111111" class="links">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -79,13 +83,15 @@
           <li class="itom">
             <a href="" class="projects-link">
               <img src="./img/img (1).jpg" alt="Технокряк" />
-              <h2 class="projects-title">Технокряк</h2>
-              <p class="projects-text">Веб-сайт</p>
-              <p class="project-fish">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="shadov">
+                <h2 class="projects-title">Технокряк</h2>
+                <p class="projects-text">Веб-сайт</p>
+                <p class="project-fish">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
             </a>
           </li>
 
@@ -95,104 +101,120 @@
                 src="./img/img (2).jpg"
                 alt="Постер New Orlean vs Golden Star"
               />
-              <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
-              <p class="projects-text">Дизайн</p>
-              <p class="project-fish">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="shadov">
+                <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
+                <p class="projects-text">Дизайн</p>
+                <p class="project-fish">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
             </a>
           </li>
 
           <li class="itom">
             <a href="" class="projects-link">
               <img src="./img/img (3).jpg" alt="Логотип ресторана Seafood" />
-              <h2 class="projects-title">Ресторан Seafood</h2>
-              <p class="projects-text">Веб-сайт</p>
-              <p class="project-fish">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="shadov">
+                <h2 class="projects-title">Ресторан Seafood</h2>
+                <p class="projects-text">Веб-сайт</p>
+                <p class="project-fish">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
             </a>
           </li>
 
           <li class="itom">
             <a href="" class="projects-link">
               <img src="./img/img (4).jpg" alt="Наушники" />
-              <h2 class="projects-title">Проект Prime</h2>
-              <p class="projects-text">Маркетинг</p>
-              <p class="project-fish">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="shadov">
+                <h2 class="projects-title">Проект Prime</h2>
+                <p class="projects-text">Маркетинг</p>
+                <p class="project-fish">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
             </a>
           </li>
 
           <li class="itom">
             <a href="" class="projects-link">
               <img src="./img/img (5).jpg" alt="Коробки" />
-              <h2 class="projects-title">Проект Boxes</h2>
-              <p class="projects-text">Приложение</p>
-              <p class="project-fish">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="shadov">
+                <h2 class="projects-title">Проект Boxes</h2>
+                <p class="projects-text">Приложение</p>
+                <p class="project-fish">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
             </a>
           </li>
 
           <li class="itom">
             <a href="" class="projects-link">
               <img src="./img/img (6).jpg" alt="Монитор" />
-              <h2 class="projects-title">Inspiration has no Borders</h2>
-              <p class="projects-text">Веб-сайт</p>
-              <p class="project-fish">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="shadov">
+                <h2 class="projects-title">Inspiration has no Borders</h2>
+                <p class="projects-text">Веб-сайт</p>
+                <p class="project-fish">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
             </a>
           </li>
 
           <li class="itom">
             <a href="" class="projects-link">
               <img src="./img/img (7).jpg" alt="Журнал" />
-              <h2 class="projects-title">Издание Limited Edition</h2>
-              <p class="projects-text">Дизайн</p>
-              <p class="project-fish">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="shadov">
+                <h2 class="projects-title">Издание Limited Edition</h2>
+                <p class="projects-text">Дизайн</p>
+                <p class="project-fish">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
             </a>
           </li>
 
           <li class="itom">
             <a href="" class="projects-link">
               <img src="./img/img (8).jpg" alt="Логотип проекта" />
-              <h2 class="projects-title">Проект LAB</h2>
-              <p class="projects-text">Маркетинг</p>
-              <p class="project-fish">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="shadov">
+                <h2 class="projects-title">Проект LAB</h2>
+                <p class="projects-text">Маркетинг</p>
+                <p class="project-fish">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
             </a>
           </li>
 
           <li class="itom">
             <a href="" class="projects-link">
               <img src="./img/img (9).jpg" alt="Ноутбук" />
-              <h2 class="projects-title">Growing Business</h2>
-              <p class="projects-text">Приложение</p>
-              <p class="project-fish">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="shadov">
+                <h2 class="projects-title">Growing Business</h2>
+                <p class="projects-text">Приложение</p>
+                <p class="project-fish">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
             </a>
           </li>
         </ul>
@@ -217,10 +239,34 @@
         <div class="footer-marrite">
           <p class="footer-call">присоединяйтесь</p>
           <ul class="social">
-            <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-            <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-            <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
-            <li><a href="" aria-label="Ссылка на Linkedin">Linkedin</a></li>
+            <li>
+              <a href="" aria-label="Ссылка на Instagram">
+                <svg widht="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" aria-label="Ссылка на Twitter">
+                <svg widht="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-tvitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" aria-label="Ссылка на Facebook">
+                <svg widht="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" aria-label="Ссылка на Linkedin">
+                <svg widht="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
