выравнивает свг по центру

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             >
           </li>
 
-          <li>
+          <li class="auth-smart">
             <svg widht="10" height="15">
               <use href="./img/symbol-defs.svg#icon-smartphone"></use>
             </svg>
