Доделывает ховер на свдж

--- a/index.html
+++ b/index.html
@@ -150,16 +150,16 @@
           <ul class="team">
             <li class="team-item">
               <a href=""
-                ><img class="foto" src="./img/John.jpg" alt="John Smith"
+                ><img class="foto" src="./img/John.jpg" alt="Николай Кучеренко"
               /></a>
               <div class="shadov">
-                <h3 class="team-name">John Smith</h3>
+                <h3 class="team-name">Николай Кучеренко</h3>
                 <p class="team-text">Product Designer</p>
 
                 <ul class="social">
                   <li class="social-img">
                     <a href="">
-                      <svg widht="20" height="20">
+                      <svg class="icon-social" widht="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -167,7 +167,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg widht="20" height="20">
+                      <svg class="icon-social" widht="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-tvitter"></use>
                       </svg>
                     </a>
@@ -175,7 +175,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg widht="20" height="20">
+                      <svg class="icon-social" widht="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -183,7 +183,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg widht="20" height="20">
+                      <svg class="icon-social" widht="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -193,15 +193,15 @@
             </li>
 
             <li class="team-item">
-              <a href=""><img src="./img/Marta.jpg" alt="Marta Stewart" /></a>
+              <a href=""><img src="./img/Marta.jpg" alt="Ольга Иванова" /></a>
               <div class="shadov">
-                <h3 class="team-name">Marta Stewart</h3>
+                <h3 class="team-name">Ольга Иванова</h3>
                 <p class="team-text">Frontend Developer</p>
 
                 <ul class="social">
                   <li class="social-img">
                     <a href="">
-                      <svg widht="20" height="20">
+                      <svg class="icon-social" widht="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -209,7 +209,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg widht="20" height="20">
+                      <svg class="icon-social" widht="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-tvitter"></use>
                       </svg>
                     </a>
@@ -217,7 +217,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg widht="20" height="20">
+                      <svg class="icon-social" widht="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -225,7 +225,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg widht="20" height="20">
+                      <svg class="icon-social" widht="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -235,15 +235,17 @@
             </li>
 
             <li class="team-item">
-              <a href=""><img src="./img/Robert.jpg" alt="Robert Jakis" /></a>
+              <a href=""
+                ><img src="./img/Robert.jpg" alt="Андрей Шевченко"
+              /></a>
               <div class="shadov">
-                <h3 class="team-name">Robert Jakis</h3>
+                <h3 class="team-name">Андрей Шевченко</h3>
                 <p class="team-text">Marketing</p>
 
                 <ul class="social">
                   <li class="social-img">
                     <a href="">
-                      <svg widht="20" height="20">
+                      <svg class="icon-social" widht="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -251,7 +253,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg widht="20" height="20">
+                      <svg class="icon-social" widht="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-tvitter"></use>
                       </svg>
                     </a>
@@ -259,7 +261,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg widht="20" height="20">
+                      <svg class="icon-social" widht="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -267,7 +269,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg widht="20" height="20">
+                      <svg class="icon-social" widht="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -277,15 +279,15 @@
             </li>
 
             <li class="team-item">
-              <a href=""><img src="./img/Martin.jpg" alt="Martin Doe" /></a>
+              <a href=""><img src="./img/Martin.jpg" alt="Иван Николаев" /></a>
               <div class="shadov">
-                <h3 class="team-name">Martin Doe</h3>
+                <h3 class="team-name">Иван Николаев</h3>
                 <p class="team-text">UI Designer</p>
 
                 <ul class="social">
                   <li class="social-img">
                     <a href="">
-                      <svg widht="20" height="20">
+                      <svg class="icon-social" widht="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -293,7 +295,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg widht="20" height="20">
+                      <svg class="icon-social" widht="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-tvitter"></use>
                       </svg>
                     </a>
@@ -301,7 +303,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg widht="20" height="20">
+                      <svg class="icon-social" widht="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -309,7 +311,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg widht="20" height="20">
+                      <svg class="icon-social" widht="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -329,7 +331,7 @@
           <ul class="clients">
             <li class="clients-item">
               <a href="">
-                <svg widht="44.3" height="49.2">
+                <svg class="icon-clients" widht="44.3" height="49.2">
                   <use href="./img/symbol-defs.svg#icon-Client1"></use>
                 </svg>
               </a>
@@ -337,7 +339,7 @@
 
             <li class="clients-item">
               <a href="">
-                <svg widht="40" height="52">
+                <svg class="icon-clients" widht="40" height="52">
                   <use href="./img/symbol-defs.svg#icon-Client2"></use>
                 </svg>
               </a>
@@ -345,7 +347,7 @@
 
             <li class="clients-item">
               <a href="">
-                <svg widht="41" height="42.6">
+                <svg class="icon-clients" widht="41" height="42.6">
                   <use href="./img/symbol-defs.svg#icon-Client3"></use>
                 </svg>
               </a>
@@ -353,7 +355,7 @@
 
             <li class="clients-item">
               <a href="">
-                <svg widht="80" height="42">
+                <svg class="icon-clients" widht="80" height="42">
                   <use href="./img/symbol-defs.svg#icon-Client4"></use>
                 </svg>
               </a>
@@ -361,7 +363,7 @@
 
             <li class="clients-item">
               <a href="">
-                <svg widht="60" height="47">
+                <svg class="icon-clients" widht="60" height="47">
                   <use href="./img/symbol-defs.svg#icon-Client5"></use>
                 </svg>
               </a>
@@ -369,7 +371,7 @@
 
             <li class="clients-item">
               <a href="">
-                <svg widht="88.5" height="45.5">
+                <svg class="icon-clients" widht="88.5" height="45.5">
                   <use href="./img/symbol-defs.svg#icon-Client6"></use>
                 </svg>
               </a>
