--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
             >
           </li>
 
-          <li>
+          <li class="auth-smart">
             <svg widht="10" height="15">
               <use href="./img/symbol-defs.svg#icon-smartphone"></use>
             </svg>
@@ -239,28 +239,28 @@
         <div class="footer-marrite">
           <p class="footer-call">присоединяйтесь</p>
           <ul class="social">
-            <li>
+            <li class="circle">
               <a href="" aria-label="Ссылка на Instagram">
                 <svg widht="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="circle">
               <a href="" aria-label="Ссылка на Twitter">
                 <svg widht="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-tvitter"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="circle">
               <a href="" aria-label="Ссылка на Facebook">
                 <svg widht="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="circle">
               <a href="" aria-label="Ссылка на Linkedin">
                 <svg widht="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-linkedin"></use>
