--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <ul class="auth-nav">
           <li class="auth-con">
-            <svg widht="16" height="11.2">
+            <svg class="envelope">
               <use href="./img/symbol-defs.svg#icon-envelope"></use>
             </svg>
             <a href="mailto:info@devstudio.com" class="links"
@@ -45,7 +45,7 @@
           </li>
 
           <li class="auth-smart">
-            <svg widht="10" height="15">
+            <svg class="smart">
               <use href="./img/symbol-defs.svg#icon-smartphone"></use>
             </svg>
             <a href="tel:+380961111111" class="links">+38 096 111 11 11</a>
@@ -58,7 +58,10 @@
       <!--Герой-->
       <section class="hero overlay">
         <div class="container">
-          <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+          <h1 class="hero-title">
+            ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />
+            ДЛЯ ВАШЕГО БИЗНЕСА
+          </h1>
           <a href="" class="hero-button">Заказать услугу</a>
         </div>
       </section>
